# jqg

./: .gitignore  README.md  pyproject.toml  pyqg_test.py
benchmarks/: barotropic_instability_cpu_benchmarking.py  evaluate_timesteppers.py
examples/: baroclinic_instability.py  baroclinic_instability2.py  barotropic_instability.py  barotropic_instability_cpu_benchmarking.py  barotropic_instability_gpu_benchmarking.py  barotropic_rossby_wave.py  barotropic_rossby_wave2.py
jqg/: __init__.py  diagnostics.py  grids.py  model.py  solver.py  timesteppers.py  utils.py
notebooks/: reference.ipynb  scratch.ipynb
tests/: test_callbacks.py  test_diagnostics.py  test_io.py  test_model.py  test_solver.py
