[project]
name = "jqg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "matplotlib>=3.10.9",
    "netcdf4>=1.7.4",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "scipy>=1.17.1",
    "xarray>=2026.4.0",
]
