[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "jqg"
version = "0.1.0"
description = "Two-layer quasi-geostrophic model (JAX)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "dask>=2026.3.0",
    "ipykernel>=7.2.0",
    "jax[cuda10]>=0.5.0",
    "matplotlib>=3.10.9",
    "netcdf4>=1.7.4",
    "notebook>=7.5.6",
    "numpy>=2.4.4",
    "pyqg",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "xarray>=2026.4.0",
    "zarr>=3.2.1",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]>=0.5.0"]

[tool.hatch.build.targets.wheel]
packages = ["jqg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
pyqg = { git = "https://github.com/pyqg/pyqg.git" }
